--- a/app/globals.css
+++ b/app/globals.css
@@ -177,6 +177,10 @@
   @apply flex flex-col gap-6 text-base min-w-[170px];
 }
 
+.footer__link-text {
+  @apply text-gray-500 hover:text-primary-blue;
+}
+
 .footer__copyrights {
   @apply flex justify-between items-center flex-wrap mt-10 border-t border-gray-100 sm:px-16 px-6 py-10;
 }
